# x-bookmarks-pipeline

./: .env.example  .gitignore  .x-bookmarks-oauth.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  auth_pkce.py  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.sh  com.joemccann.x-bookmarks-pipeline.plist  example_bookmark.json  main.py  package-lock.json  package.json  requirements.txt  service.py  service_ctl.sh  trading_main.py
autoresearch/: autoresearch.md  benchmark_tokens.py
docs/: X_API_BOOKMARKS_RESEARCH.md
rust/: Cargo.toml  README.md
rust/src/: cache.rs  classifier.rs  cli.rs  config.rs  error.rs  fetcher.rs  generator.rs  lib.rs  llm.rs  main.rs  models.rs  notify.rs  orchestrator.rs  parser.rs  planner.rs  prompts.rs  validator.rs  vision.rs
scripts/: notify.mjs
src/: browser.rs  cache.rs  cli.rs  config.py  config.rs  console.py  cost.rs  error.rs  fetcher.rs  generator.rs  lib.rs  llm.rs  main.rs  notify.rs  orchestrator.rs  pipeline.py  planner.rs  vision.rs  x_api_cache.rs
tasks/: lessons.md  todo.md
tests/: __init__.py  cerebras_eval.py  conftest.py  dotenv_bootstrap.rs  test_article_live.py  test_cache.py  test_classifier.py  test_clients.py  test_fetcher.py  test_generator.py  test_main.py  test_pipeline.py  test_pipeline_hook.py  test_planner.py  test_validator.py  (+1 more)
trading/: pyproject.toml
trading/tests/: test_indexer.py  test_indicators.py  test_market_data.py  test_reader.py  test_schema.py  test_strategies.py
trading/trading/: __init__.py  config.py  indexer.py  runner.py
trading/trading/db/: reader.py  schema.py
trading/trading/fetchers/: market_data.py
trading/trading/indicators/: __init__.py  move_psp_spread.py
trading/trading/strategies/: __init__.py  vix_vvix_mean_reversion.py
(+24 files in other folders)
