[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "trading-engine"
version = "0.1.0"
description = "Python trading indicators and strategies — reads from x-bookmarks-pipeline signals.db"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "pandas-ta-classic>=0.4.25b",
    "backtesting>=0.3.3",
    "yfinance>=0.2.50",
    "quantstats>=0.0.62",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["trading*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
